[gd_scene load_steps=141 format=2]

[ext_resource path="res://sprite/x.png" type="Texture" id=1]
[ext_resource path="res://script/AnimationTree_X.gd" type="Script" id=2]
[ext_resource path="res://script/Player.gd" type="Script" id=3]
[ext_resource path="res://scene/Charge_Shoot.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/Data.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Climb"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Climb_Down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Climb_Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 0.000644291 ),
"update": 1,
"values": [ 67, 68 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.81459e-05, 0.00128859 ),
"update": 1,
"values": [ 17, 18 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.29734, 0.4, 0.49734 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 62, 63, 62, 63, 62, 63 ]
}

[sub_resource type="Animation" id=7]
length = 1.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 116, 117, 118, 119, 120, 121, 122, 123 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 113, 114, 115 ]
}

[sub_resource type="Animation" id=9]
length = 2.1
loop = true
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66 ]
}

[sub_resource type="Animation" id=12]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1.62451, 1, 1, 1, 1, 1, 1, 1, 0.164939 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61 ]
}

[sub_resource type="Animation" id=14]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 49, 50 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Climb"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Climb_Down"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Climb_Shoot"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Dash"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Jump_Shoot"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Run_Shoot"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachineTransition" id=72]

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]

[sub_resource type="AnimationNodeStateMachineTransition" id=83]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]

[sub_resource type="AnimationNodeStateMachineTransition" id=88]

[sub_resource type="AnimationNodeStateMachineTransition" id=89]

[sub_resource type="AnimationNodeStateMachineTransition" id=90]

[sub_resource type="AnimationNodeStateMachineTransition" id=91]

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=97]

[sub_resource type="AnimationNodeStateMachineTransition" id=98]

[sub_resource type="AnimationNodeStateMachineTransition" id=99]

[sub_resource type="AnimationNodeStateMachineTransition" id=100]

[sub_resource type="AnimationNodeStateMachineTransition" id=101]

[sub_resource type="AnimationNodeStateMachineTransition" id=102]

[sub_resource type="AnimationNodeStateMachineTransition" id=103]

[sub_resource type="AnimationNodeStateMachineTransition" id=104]

[sub_resource type="AnimationNodeStateMachineTransition" id=105]

[sub_resource type="AnimationNodeStateMachineTransition" id=106]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachineTransition" id=109]

[sub_resource type="AnimationNodeStateMachineTransition" id=110]

[sub_resource type="AnimationNodeStateMachineTransition" id=111]

[sub_resource type="AnimationNodeStateMachineTransition" id=112]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=113]

[sub_resource type="AnimationNodeStateMachineTransition" id=114]

[sub_resource type="AnimationNodeStateMachineTransition" id=115]

[sub_resource type="AnimationNodeStateMachineTransition" id=116]

[sub_resource type="AnimationNodeStateMachineTransition" id=117]

[sub_resource type="AnimationNodeStateMachineTransition" id=118]

[sub_resource type="AnimationNodeStateMachineTransition" id=119]

[sub_resource type="AnimationNodeStateMachineTransition" id=120]

[sub_resource type="AnimationNodeStateMachineTransition" id=121]

[sub_resource type="AnimationNodeStateMachineTransition" id=122]

[sub_resource type="AnimationNodeStateMachineTransition" id=123]

[sub_resource type="AnimationNodeStateMachineTransition" id=124]

[sub_resource type="AnimationNodeStateMachineTransition" id=125]

[sub_resource type="AnimationNodeStateMachineTransition" id=126]

[sub_resource type="AnimationNodeStateMachineTransition" id=127]

[sub_resource type="AnimationNodeStateMachineTransition" id=128]

[sub_resource type="AnimationNodeStateMachineTransition" id=129]

[sub_resource type="AnimationNodeStateMachineTransition" id=130]

[sub_resource type="AnimationNodeStateMachineTransition" id=131]

[sub_resource type="AnimationNodeStateMachineTransition" id=132]

[sub_resource type="AnimationNodeStateMachine" id=133]
states/Climb/node = SubResource( 15 )
states/Climb/position = Vector2( 336, -66.447 )
states/Climb_Down/node = SubResource( 16 )
states/Climb_Down/position = Vector2( 506, -151.447 )
states/Climb_Shoot/node = SubResource( 17 )
states/Climb_Shoot/position = Vector2( 886, -157.447 )
states/Dash/node = SubResource( 18 )
states/Dash/position = Vector2( 76, 168 )
states/Die/node = SubResource( 19 )
states/Die/position = Vector2( 767, 55.5531 )
states/Hurt/node = SubResource( 20 )
states/Hurt/position = Vector2( 755, 173 )
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 336, 168 )
states/Jump/node = SubResource( 22 )
states/Jump/position = Vector2( 330, 12 )
states/Jump_Shoot/node = SubResource( 23 )
states/Jump_Shoot/position = Vector2( 551, 12 )
states/Run/node = SubResource( 24 )
states/Run/position = Vector2( 330, 344 )
states/Run_Shoot/node = SubResource( 25 )
states/Run_Shoot/position = Vector2( 551, 338.623 )
states/Shoot/node = SubResource( 26 )
states/Shoot/position = Vector2( 551, 173 )
transitions = [ "Shoot", "Idle", SubResource( 27 ), "Idle", "Shoot", SubResource( 28 ), "Run", "Idle", SubResource( 29 ), "Idle", "Jump", SubResource( 30 ), "Run", "Jump", SubResource( 31 ), "Shoot", "Jump", SubResource( 32 ), "Jump", "Idle", SubResource( 33 ), "Jump", "Run", SubResource( 34 ), "Jump", "Shoot", SubResource( 35 ), "Idle", "Run", SubResource( 36 ), "Dash", "Idle", SubResource( 37 ), "Idle", "Dash", SubResource( 38 ), "Dash", "Jump", SubResource( 39 ), "Run", "Run_Shoot", SubResource( 40 ), "Shoot", "Run_Shoot", SubResource( 41 ), "Run_Shoot", "Shoot", SubResource( 42 ), "Run_Shoot", "Run", SubResource( 43 ), "Run_Shoot", "Idle", SubResource( 44 ), "Jump", "Jump_Shoot", SubResource( 45 ), "Jump_Shoot", "Jump", SubResource( 46 ), "Jump_Shoot", "Shoot", SubResource( 47 ), "Jump_Shoot", "Idle", SubResource( 48 ), "Idle", "Jump_Shoot", SubResource( 49 ), "Idle", "Run_Shoot", SubResource( 50 ), "Run", "Dash", SubResource( 51 ), "Dash", "Run", SubResource( 52 ), "Shoot", "Dash", SubResource( 53 ), "Dash", "Shoot", SubResource( 54 ), "Run_Shoot", "Dash", SubResource( 55 ), "Dash", "Run_Shoot", SubResource( 56 ), "Shoot", "Hurt", SubResource( 57 ), "Jump_Shoot", "Hurt", SubResource( 58 ), "Run_Shoot", "Hurt", SubResource( 59 ), "Idle", "Hurt", SubResource( 60 ), "Jump", "Hurt", SubResource( 61 ), "Run", "Hurt", SubResource( 62 ), "Dash", "Hurt", SubResource( 63 ), "Hurt", "Jump_Shoot", SubResource( 64 ), "Hurt", "Shoot", SubResource( 65 ), "Hurt", "Run_Shoot", SubResource( 66 ), "Hurt", "Run", SubResource( 67 ), "Hurt", "Idle", SubResource( 68 ), "Hurt", "Jump", SubResource( 69 ), "Hurt", "Dash", SubResource( 70 ), "Hurt", "Die", SubResource( 71 ), "Shoot", "Die", SubResource( 72 ), "Jump_Shoot", "Die", SubResource( 73 ), "Run_Shoot", "Die", SubResource( 74 ), "Jump", "Die", SubResource( 75 ), "Idle", "Die", SubResource( 76 ), "Dash", "Die", SubResource( 77 ), "Run", "Die", SubResource( 78 ), "Die", "Hurt", SubResource( 79 ), "Die", "Jump_Shoot", SubResource( 80 ), "Die", "Shoot", SubResource( 81 ), "Die", "Run_Shoot", SubResource( 82 ), "Die", "Jump", SubResource( 83 ), "Die", "Idle", SubResource( 84 ), "Die", "Run", SubResource( 85 ), "Die", "Dash", SubResource( 86 ), "Jump", "Climb", SubResource( 87 ), "Climb", "Jump", SubResource( 88 ), "Climb", "Climb_Down", SubResource( 89 ), "Climb_Down", "Climb", SubResource( 90 ), "Climb_Down", "Jump", SubResource( 91 ), "Jump", "Climb_Down", SubResource( 92 ), "Jump_Shoot", "Climb_Down", SubResource( 93 ), "Climb_Down", "Jump_Shoot", SubResource( 94 ), "Jump_Shoot", "Climb", SubResource( 95 ), "Climb", "Jump_Shoot", SubResource( 96 ), "Climb_Down", "Die", SubResource( 97 ), "Die", "Climb_Down", SubResource( 98 ), "Climb_Down", "Idle", SubResource( 99 ), "Idle", "Climb_Down", SubResource( 100 ), "Climb_Down", "Shoot", SubResource( 101 ), "Shoot", "Climb_Down", SubResource( 102 ), "Climb_Down", "Hurt", SubResource( 103 ), "Hurt", "Climb_Down", SubResource( 104 ), "Dash", "Climb_Down", SubResource( 105 ), "Climb_Down", "Dash", SubResource( 106 ), "Climb_Down", "Run", SubResource( 107 ), "Run", "Climb_Down", SubResource( 108 ), "Climb_Down", "Run_Shoot", SubResource( 109 ), "Run_Shoot", "Climb_Down", SubResource( 110 ), "Climb_Down", "Climb_Shoot", SubResource( 111 ), "Climb_Shoot", "Climb_Down", SubResource( 112 ), "Climb_Shoot", "Jump_Shoot", SubResource( 113 ), "Jump_Shoot", "Climb_Shoot", SubResource( 114 ), "Climb_Shoot", "Climb", SubResource( 115 ), "Climb", "Climb_Shoot", SubResource( 116 ), "Climb_Shoot", "Jump", SubResource( 117 ), "Jump", "Climb_Shoot", SubResource( 118 ), "Climb_Shoot", "Die", SubResource( 119 ), "Die", "Climb_Shoot", SubResource( 120 ), "Climb_Shoot", "Hurt", SubResource( 121 ), "Hurt", "Climb_Shoot", SubResource( 122 ), "Shoot", "Climb_Shoot", SubResource( 123 ), "Climb_Shoot", "Shoot", SubResource( 124 ), "Climb_Shoot", "Idle", SubResource( 125 ), "Idle", "Climb_Shoot", SubResource( 126 ), "Climb_Shoot", "Run_Shoot", SubResource( 127 ), "Run_Shoot", "Climb_Shoot", SubResource( 128 ), "Climb_Shoot", "Run", SubResource( 129 ), "Run", "Climb_Shoot", SubResource( 130 ), "Climb_Shoot", "Dash", SubResource( 131 ), "Dash", "Climb_Shoot", SubResource( 132 ) ]
graph_offset = Vector2( 0, -312.304 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=134]

[sub_resource type="RectangleShape2D" id=135]
extents = Vector2( 17.379, 33.2 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 3 )

[node name="Timer_Climb_Down" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="X" type="Sprite" parent="."]
position = Vector2( -0.583977, -3 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 9
hframes = 16
frame = 5

[node name="Charge_Shoot" parent="X" instance=ExtResource( 4 )]
position = Vector2( 1, -3.5 )

[node name="Animation" type="AnimationPlayer" parent="X"]
anims/Climb = SubResource( 1 )
anims/Climb_Down = SubResource( 2 )
anims/Climb_Shoot = SubResource( 3 )
anims/Dash = SubResource( 4 )
anims/Dash_R = SubResource( 5 )
anims/Dash_Shoot = SubResource( 6 )
anims/Die = SubResource( 7 )
anims/Hurt = SubResource( 8 )
anims/Idle = SubResource( 9 )
anims/Jump = SubResource( 10 )
anims/Jump_Shoot = SubResource( 11 )
anims/Run = SubResource( 12 )
anims/Run_Shoot = SubResource( 13 )
anims/Shoot = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="X"]
tree_root = SubResource( 133 )
anim_player = NodePath("../Animation")
active = true
parameters/playback = SubResource( 134 )
script = ExtResource( 2 )

[node name="Dash_Deko_Before" type="Position2D" parent="X"]
position = Vector2( 8.5, -1.5 )

[node name="Dash_Deko_After" type="Position2D" parent="X"]
position = Vector2( -37.5, 4 )

[node name="Audio_Stage" type="AudioStreamPlayer" parent="X"]

[node name="Audio_Player" type="AudioStreamPlayer" parent="X"]

[node name="Audio_Foot_Step" type="AudioStreamPlayer" parent="X"]

[node name="Audio_Shooter" type="AudioStreamPlayer" parent="X"]

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -2.625, -3.9 )
shape = SubResource( 135 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.32
one_shot = true

[node name="Shoot_Pos" type="Position2D" parent="."]
position = Vector2( 31.816, -18.914 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 40.1931, -0.731781 )
current = true
limit_left = 0
limit_top = 0
limit_right = 3830
limit_bottom = 600
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Timer_Shoot" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="Timer_Ghost" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Timer_hurt" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_dead" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Timer_immunity" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Data" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
rotation = 4.71239
scale = Vector2( 2.5, 1 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
rotation = 1.5708
scale = Vector2( 2.5, 1 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Timer_Climb" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timer_Create_Ghost" type="Timer" parent="."]
wait_time = 0.03
one_shot = true

[node name="Audio_X" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Timer_Climb_Down" to="." method="_on_Timer_Climb_Down_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_Shoot" to="." method="_on_Timer_Shoot_timeout"]
[connection signal="timeout" from="Timer_Ghost" to="." method="_on_Timer_Ghost_timeout"]
[connection signal="timeout" from="Timer_hurt" to="." method="_on_Timer_hurt_timeout"]
[connection signal="timeout" from="Timer_dead" to="." method="_on_Timer_dead_timeout"]
[connection signal="timeout" from="Timer_immunity" to="." method="_on_Timer_immunity_timeout"]
[connection signal="timeout" from="Timer_Climb" to="." method="_on_Timer_Climb_timeout"]
[connection signal="timeout" from="Timer_Create_Ghost" to="." method="_on_Timer_Create_Ghost_timeout"]
